@@ -1,14 +1,16 @@
 [Module]
 Name=Tree
 Changelog.Creator=Module::Metadata::Changes V 2.04
-Changelog.Parser=Config::IniFiles V 2.68
+Changelog.Parser=Config::IniFiles V 2.78
 
 [V 1.02]
 Date=2012-10-04T12:10:00
 Comments= <<EOT
 - Ron Savage is now co-maint.
-- Patch Tree::Fast's meta() to accept a hashref so metadata can be set with $t -> meta({key => value}),
-as well asg by directly accessing the internal hashref '_meta'.
+- Patch Tree::Fast's value() to accept a defained value so the node's value can be set with
+$n -> value($new_value).
+- Patch Tree::Fast's meta() to accept a hashref so metadata can be set with $n -> meta({key => value}),
+as well as by directly accessing the internal hashref '_meta'.
 - Patch t/Tree/001_root_node.t to test the above.
 - Rename Changes to CHANGES.
 - Use ini.report.pl (shipped with Module::Metadata::Changes) to add Changelog.ini to the distro.
